2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/paragraph.t: Access paragraph formatting modules via a 
	string with the name of the module in it.  Aliasing a module's 
	namespace to switch between modules doesn't seem to work 
	reliably.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/TestXS.pm: Always print 
	debugging output, and remove fallback code copied from 
	XSParagraph.pm.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am (test_files): Add east_asian_in_w.texi.
	* tp/t/README: Mention listing test input files in Makefile.am.  
	Mention another way of running a single test.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/Makefile.am (EXTRA_DIST): Add 
	fail.pl.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/TestXS.pm: Change package name.
	Remove comments copied from XSParagraph.pm.  Remove unused 
	functions, also copied here.  Rename $VERSION variable to avoid 
	it being altered by maintenence scripts.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c (format_entry): Add comment for 
	local variable, and goto label.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/install-info.c (format_entry): Use a local 
	variable to avoid dereferences of output variable.

2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	Comments and formatting changes.
	* install-info/install-info.c (parse_input): Combine a comment 
	with comment at start of function, and add more information.
	Change another comment.
	(install_entry_here): Formatting changes.
	(main) <not deleting>: Comment changed for grammar.

2015-11-03  Gavin Smith  <gavinsmith0123@gmail.com>

	Prevent line breaks in Chinese text in cross-refereces, reported 
	by Brendan O'Dea.	
	
	* tp/Texinfo/Convert/ParagraphNonXS.pm
	(set_space_protection): New parameter, 'double_width_no_break'.